# AoCbot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
bot/: __init__.py  __main__.py  constants.py
bot/cogs/: adventofcode.py
bot/resources/advent_of_code/: about.json
