[tool.poetry]
name = "aocbot"
version = "1.2.0"
description = "A d.py Cog for Advent of Code!"
license="MIT"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
repository = "https://github.com/sco1/AoCbot.git"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Topic :: Communications :: Chat',
    'Topic :: Internet'
]

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", branch = "rewrite" }
beautifulsoup4 = "^4.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = {version = "*", allows-prereleases=true}
pre-commit = { git = "https://github.com/pre-commit/pre-commit.git" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
