[tool.poetry]
name = "AoCbot"
version = "2019.11"
description = "A d.py Cog for Advent of Code!"
license="MIT"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
repository = "https://github.com/sco1/AoCbot.git"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Communications :: Chat',
    'Topic :: Internet'
]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.7"
"discord.py" = "^1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-annotations = "^1.1"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
